asupersync-macros/tests/compile_fail/entry_bad_return.rs
use asupersync_macros::test;

#[test]
async fn returns_u8() -> u8 {
    1
}
